<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/addGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#673AB7"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/add_game"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/Decider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterAGame"
        app:layout_constraintVertical_bias="0.181" />

    <TextView
        android:id="@+id/whatGameAreWePlaying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/what_game_are_we_playing"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/controllerIcon"
        app:layout_constraintVertical_bias="0.118" />

    <ImageView
        android:id="@+id/controllerIcon"
        android:layout_width="140dp"
        android:layout_height="135dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/icon_for_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gamecontrollericon" />

    <Button
        android:id="@+id/Decider"
        android:layout_width="409dp"
        android:layout_height="55dp"
        android:background="#673AB7"
        android:fontFamily="@font/roboto_black"
        android:text="@string/decide"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/enterAGame"
        android:layout_width="283dp"
        android:layout_height="46dp"
        android:ems="10"
        android:fontFamily="@font/roboto_black"
        android:hint="@string/enter_a_game_you_d_like_to_play"
        android:inputType="textPersonName"
        android:singleLine="false"
        app:layout_constraintBottom_toBottomOf="@+id/Decider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.618"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>